# CW4_Vacancies_Parsing_v2

./: .gitignore  main.py  pyproject.toml  readme.md  settings.py
api_models/: get_remote_data_mixin.py  hh_api.py  site_api.py  sj_api.py
models/: exceptions.py  json_saver.py  menu.py  search_vacancies.py  vacancy.py
utils/: sort_and_filter.py  validate_data_key.py
